--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
--->
+
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -20,7 +20,7 @@
         <Form name="MyForm">
             <center>
                 <h2 style="color:blue;">ÍNDICE DE MASA CORPORAL</h2>              
-                <img src="imagenes/IMC.jpg" style="width:20%">
+                <img src="IMC.jpg" style="width:20%">
                 <h3>Ingrese su peso en Kg:</h3>
                 <input type="text" name="peso" size="2" style="text-align:center"><br>
                 <h3>Ingrese su estatura en metros:</h3>
